--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     />
     <meta
       name="keywords"
-      content="Vue 3, Vite, Naive UI, TypeScript, TailwindCSS, Admin, Dolphin Admin"
+      content="Vue 3, Vite, Naive UI, TypeScript, TailwindCSS, Admin, Fish Test"
     />
     <meta
       name="author"
-      content="Bruce Song"
+      content="Hollow"
     />
     <meta
       name="viewport"
@@ -23,7 +23,7 @@
       type="image/svg+xml"
       href="/favicon.ico"
     />
-    <title>Dolphin Admin Vue</title>
+    <title>Fish Test Vue</title>
   </head>
   <body>
     <div id="app"></div>
